--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"scripts":{"start":"node ./server.js"},"dependencies":{"dotenv":"^16.0.3","express":"^4.18.2"},"devDependencies":{"tailwindcss":"^3.2.7"}}
+{"scripts":{"start":"node ./server.js"},"dependencies":{"dotenv":"^16.0.3","express":"^4.18.2","winston":"^3.17.0"},"devDependencies":{"tailwindcss":"^3.2.7"}}
